// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContributorBuilder should render builder with sidebar: initialRenderEditing 1`] = `
<DocumentFragment>
  <div
    class="contributor-builder-root editing"
  >
    <div
      class="criteria-builder-section-sidebar"
    >
      <div
        class="criteria-sidebar-root"
      >
        <div
          class="sidebar-header"
        >
          properties
        </div>
        <div
          class="sidebar-search"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-item"
            >
              <input
                class="form-control input-group-inset input-group-inset-after"
                data-testid="search-input"
                placeholder="search"
                type="text"
                value=""
              />
              <div
                class="input-group-inset-item input-group-inset-item-after"
              >
                <button
                  class="btn btn-unstyled"
                  data-testid="search-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lexicon-icon lexicon-icon-search icon"
                    viewBox="0 0 512 512"
                  >
                    <use
                      xlink:href="#search"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sidebar-collapse"
        >
          <ul
            class="sidebar-collapse-groups list-unstyled"
          >
            <li
              class="sidebar-collapse-user"
            >
              <div
                class="sidebar-collapse-header-root"
              >
                <a
                  class="sidebar-collapse-header d-flex justify-content-between"
                >
                  User
                  <span
                    class="collapse-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-angle-right active"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#angle-right"
                      />
                    </svg>
                  </span>
                </a>
              </div>
              <ul
                class="properties-list active"
              >
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Ancestor Organization IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Class PK
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Company ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-date"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#date"
                        />
                      </svg>
                    </span>
                  </span>
                  Date Modified
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Email Address
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  First Name
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Group ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Group IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Job Title
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Last Name
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Organization IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Role IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Scope Group ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Screen Name
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Team IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  User Group IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  User ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  User Name
                </li>
              </ul>
            </li>
            <li
              class="sidebar-collapse-user-organization"
            >
              <div
                class="sidebar-collapse-header-root"
              >
                <a
                  class="sidebar-collapse-header d-flex justify-content-between"
                >
                  User Organization
                  <span
                    class="collapse-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-angle-right"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#angle-right"
                      />
                    </svg>
                  </span>
                </a>
              </div>
              <ul
                class="properties-list"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="criteria-builder-section-main"
    >
      <div
        class="contributor-container"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <div
            class="content-wrapper"
          >
            <div
              class="criteria-builder-root sheet"
            >
              <div
                class="criteria-builder-toolbar"
              >
                <div
                  class="criteria-model-label"
                >
                  x-properties
                </div>
              </div>
              <div
                class="criteria-group-root criteria-group-item-root color--user"
              >
                <div
                  class="empty-drop-zone-root"
                >
                  <div
                    class="empty-drop-zone-target"
                  >
                    <div
                      class="empty-drop-zone-indicator"
                    />
                    <div
                      class="empty-drop-zone-help-message"
                    >
                      <div
                        class="message-item"
                      >
                        <img
                          class="message-icon"
                          src="/drag-and-drop.svg"
                        />
                        <span>
                          drag-and-drop-criterion-from-the-right-to-add-rules
                        </span>
                      </div>
                      <div
                        class="message-item"
                      >
                        <img
                          class="message-icon"
                          src="/drag-over.svg"
                        />
                        <span>
                          drag-and-drop-over-an-existing-criteria-to-form-groups
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <input
              class="field form-control"
              data-testid="input_test_id"
              id="input_test_id"
              name="input_test_id"
              readonly=""
              type="hidden"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContributorBuilder should render builder without sidebar: initialRenderNotEditing 1`] = `
<DocumentFragment>
  <div
    class="contributor-builder-root"
  >
    <div
      class="criteria-builder-section-sidebar"
    >
      <div
        class="criteria-sidebar-root"
      >
        <div
          class="sidebar-header"
        >
          properties
        </div>
        <div
          class="sidebar-search"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-item"
            >
              <input
                class="form-control input-group-inset input-group-inset-after"
                data-testid="search-input"
                placeholder="search"
                type="text"
                value=""
              />
              <div
                class="input-group-inset-item input-group-inset-item-after"
              >
                <button
                  class="btn btn-unstyled"
                  data-testid="search-button"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lexicon-icon lexicon-icon-search icon"
                    viewBox="0 0 512 512"
                  >
                    <use
                      xlink:href="#search"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sidebar-collapse"
        >
          <ul
            class="sidebar-collapse-groups list-unstyled"
          >
            <li
              class="sidebar-collapse-user"
            >
              <div
                class="sidebar-collapse-header-root"
              >
                <a
                  class="sidebar-collapse-header d-flex justify-content-between"
                >
                  User
                  <span
                    class="collapse-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-angle-right active"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#angle-right"
                      />
                    </svg>
                  </span>
                </a>
              </div>
              <ul
                class="properties-list active"
              >
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Ancestor Organization IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Class PK
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Company ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-date"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#date"
                        />
                      </svg>
                    </span>
                  </span>
                  Date Modified
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Email Address
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  First Name
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Group ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Group IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Job Title
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Last Name
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Organization IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Role IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Scope Group ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Screen Name
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Team IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  User Group IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  User ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-drag"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        aria-hidden="true"
                        class="lexicon-icon lexicon-icon-text"
                        viewBox="0 0 512 512"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  User Name
                </li>
              </ul>
            </li>
            <li
              class="sidebar-collapse-user-organization"
            >
              <div
                class="sidebar-collapse-header-root"
              >
                <a
                  class="sidebar-collapse-header d-flex justify-content-between"
                >
                  User Organization
                  <span
                    class="collapse-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="lexicon-icon lexicon-icon-angle-right"
                      viewBox="0 0 512 512"
                    >
                      <use
                        xlink:href="#angle-right"
                      />
                    </svg>
                  </span>
                </a>
              </div>
              <ul
                class="properties-list"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="criteria-builder-section-main"
    >
      <div
        class="contributor-container"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <div
            class="content-wrapper"
          >
            <div
              class="criteria-builder-root sheet"
            >
              <div
                class="criteria-builder-toolbar"
              >
                <div
                  class="criteria-model-label"
                >
                  x-properties
                </div>
              </div>
              <div
                class="criteria-group-root criteria-group-item-root color--user"
              >
                <div
                  class="empty-drop-zone-root"
                >
                  <div
                    class="empty-drop-zone-target"
                  >
                    <div
                      class="empty-drop-zone-indicator"
                    />
                    <div
                      class="empty-drop-zone-help-message"
                    >
                      <div
                        class="message-item"
                      >
                        <img
                          class="message-icon"
                          src="/drag-and-drop.svg"
                        />
                        <span>
                          drag-and-drop-criterion-from-the-right-to-add-rules
                        </span>
                      </div>
                      <div
                        class="message-item"
                      >
                        <img
                          class="message-icon"
                          src="/drag-over.svg"
                        />
                        <span>
                          drag-and-drop-over-an-existing-criteria-to-form-groups
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <input
              class="field form-control"
              data-testid="input_test_id"
              id="input_test_id"
              name="input_test_id"
              readonly=""
              type="hidden"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
